<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
   >
    <com.google.android.material.card.MaterialCardView
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:id="@+id/card"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        app:cardElevation="2dp"
        >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:src="@drawable/gradient"
                android:transitionName="@string/animation_key"
                android:id="@+id/img"
                android:contentDescription="@string/news" />

        <View
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@drawable/newscard_bg_view"
            android:layout_gravity="bottom"/>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:id="@+id/headline"
        android:layout_below="@id/card"
        android:textSize="15sp"
        android:transitionName="sharedT"
        android:fontFamily="@font/raleway_light"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:text="@string/please_sign_in_with_below_options_to_continue"
        />
</RelativeLayout>