<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >
    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/bgtab"
        android:id="@+id/toolbar"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/prompt_light"
                android:text="@string/feeds"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </RelativeLayout>
    </com.google.android.material.appbar.MaterialToolbar>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/twenty"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/he"
        >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="Headlines"
        android:fontFamily="@font/comfortaa"
        android:textAlignment="center"
        />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/he"
        android:id="@+id/hui"
        android:paddingBottom="5dp"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:backgroundTint="@color/white"
            app:cardElevation="0dp"
            android:id="@+id/rl2">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rll1"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Filter"
                    android:textSize="15dp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="@font/comfortaa"
                    />
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_expand_more_black_24dp"
                    android:layout_marginLeft="50dp"
                    android:id="@+id/more"
                    />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/more">
        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cg1"
            app:singleSelection="true"
            app:singleLine="true">
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:textAppearance="@style/ChipStyle"
                android:text="@string/english" />
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:textAppearance="@style/ChipStyle"
                android:text="@string/hindi" />
        </com.google.android.material.chip.ChipGroup>
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:layout_below="@id/cg1">
            <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleSelection="true"
                app:singleLine="true">
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:textAppearance="@style/ChipStyle"
                    android:text="@string/national" />
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:textAppearance="@style/ChipStyle"
                    android:text="@string/world" />
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:textAppearance="@style/ChipStyle"
                    android:text="@string/science" />
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:textAppearance="@style/ChipStyle"
                    android:text="@string/technology"/>
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:textAppearance="@style/ChipStyle"
                    android:text="@string/startup" />
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:textAppearance="@style/ChipStyle"
                    android:text="@string/sports"/>
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:textAppearance="@style/ChipStyle"
                    android:text="@string/business"/>


                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:textAppearance="@style/ChipStyle"
                    android:text="@string/politics"/>
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:textAppearance="@style/ChipStyle"
                    android:text="@string/automobile"/>
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:textAppearance="@style/ChipStyle"
                    android:text="@string/miscellaneous"/>
            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>
            </RelativeLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view1"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_below="@id/rl2"
            />


    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editorials"
        android:layout_below="@id/hui"
        android:fontFamily="@font/comfortaa"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:padding="7dp"
        android:id="@+id/tv1"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recrl"
        android:layout_below="@id/tv1"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            />
        <ProgressBar
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:visibility="gone"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recrl"
        android:id="@+id/rlll">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stories"
        android:fontFamily="@font/comfortaa"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:padding="7dp" />

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="more"
         android:layout_alignParentRight="true"
         android:layout_marginRight="@dimen/twenty"
         android:fontFamily="@font/raleway"
         android:clickable="true"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:textColor="@color/colorAccent"
         android:layout_centerVertical="true"
         android:focusable="true" />
</RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlll"
        android:paddingBottom="100dp"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />
        <ProgressBar
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/twenty"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            />
    </RelativeLayout>





</RelativeLayout>
    </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:text="Pull down to refresh"
    android:fontFamily="@font/raleway"
    android:textAlignment="center"
    android:textSize="30sp"
    android:visibility="gone"
    />
    <ProgressBar
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:id="@+id/progress_circular"
        android:visibility="gone"
        />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_light"
        android:id="@+id/btmnav"
        app:menu="@menu/new_menu"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimaryLight"
        app:itemIconTint="@drawable/nav_back"
        app:itemRippleColor="@android:color/transparent"
        app:itemHorizontalTranslationEnabled="true"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>