<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/rl1"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cross"
                android:clickable="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_back_arrow_gray_24dp"
                android:layout_alignParentStart="true"
                android:tint="@color/darkgrey"
                android:focusable="true" />
        </RelativeLayout>

    </com.google.android.material.appbar.MaterialToolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl1"
        android:scrollbars="none">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:transitionName="shared"
        >

    <TextView
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="@font/raleway_light"
        android:text="@string/please_sign_in_with_below_options_to_continue"
        android:textSize="22sp"
        android:transitionName="sharedT" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:id="@+id/rl2"
        android:layout_below="@id/head">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/gradient_3"
            android:transitionName="@string/animation_key"
            android:id="@+id/imageView"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#88000000"
            android:layout_alignParentBottom="true"
            android:paddingVertical="4dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa"
                android:textColor="@color/white"
                android:id="@+id/author"
                android:layout_marginLeft="10dp"
                android:textSize="10sp"
                android:text="author"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa"
                android:id="@+id/date"
                android:textColor="@color/white"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:textSize="10sp"
                android:text="date"/>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl2"
        android:id="@+id/rl3">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/share"
            android:src="@drawable/ic_share_black_24dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:tooltipText="share"
            android:layout_marginRight="60dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:focusable="true" />
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/save"
            app:lottie_rawRes="@raw/bookmark"
            android:tooltipText="save for offline"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl3"
        android:paddingBottom="70dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway"
            android:layout_marginVertical="5dp"
            android:textSize="15sp"
            android:layout_marginHorizontal="5dp"
            android:textAlignment="center"
            android:text="@string/hello_second_fragment"
            android:lineSpacingExtra="3dp"
            android:id="@+id/desc"/>
    </RelativeLayout>

    </RelativeLayout>
    </ScrollView>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-2569821792203202/6271292202">
        <!--ca-app-pub-3940256099942544/6300978111 test-->
        <!--ca-app-pub-2569821792203202/6271292202 orig-->
    </com.google.android.gms.ads.AdView>
</RelativeLayout>